<resources>
    <string name="app_name">Parsi App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Parsi</string>
    <string name="nav_header_subtitle">[@username]</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_columnas">Columnas</string>
    <string name="menu_tendencias">Conceptos más hablados</string>
    <string name="menu_posts_guardados">Carpetas</string>
    <string name="menu_settings">Configuración</string>
    <string name="nombre">Nombre</string>
    <string name="nombreusuario">\@NombreUsuario</string>
    <string name="separator">·</string>
...
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_home">Inicio</string>
    <string name="addFolder">+</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
...
