<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.unex.parsiapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_columnas"
        android:name="es.unex.parsiapp.ui.columns.ColumnasFragment"
        android:label="@string/menu_columnas"
        tools:layout="@layout/fragment_columnas" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="es.unex.parsiapp.ui.gallery.FolderFragment"
        android:label="@string/menu_posts_guardados"
        tools:layout="@layout/fragment_folder" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="es.unex.parsiapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>